# karabo-bridge-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  autogen.sh  docker-compose.yml  karabo-bridgeConfig.cmake.in  kb_client.hpp
examples/: CMakeLists.txt  client_for_pysim.cpp  client_for_smlt_camera.cpp  glimpse.cpp
examples/glimpse/: CMakeLists.txt  README.md  glimpse.cpp
examples/smlt_camera/: CMakeLists.txt  camera_client.cpp  client_for_smlt_camera.cpp
include/: kb_client.hpp  zhelpers.hpp  zmq.hpp
include/karabo-bridge/: kb_client.hpp
integration_test/: CMakeLists.txt  client_for_pysim.cpp
src/: client_for_pysim.cpp  client_for_smlt_camera.cpp  glimpse.cpp  run_client.cpp  server_simulator.cpp
tests/: CMakeLists.txt  docker-compose.yml  server.Dockerfile  server_simulator.cpp  test.cpp  test_anyobject.cpp  test_array.cpp  test_kbclient.cpp  test_kbdata.cpp  test_msgpackobject.cpp  test_multipart_msg.cpp  test_ndarray.cpp  test_object.cpp  test_version.cpp
tools/: CMakeLists.txt  glimpse.cpp
